# kafka-counter

./: Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  config.example.yaml  kafka_count.py  pyproject.toml  setup.py
.github/workflows/: docker.yml
